[project]
name = "medical-keyword-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataset>=1.6.2",
    "datasets>=4.7.0",
    "dotenv>=0.9.9",
    "gradio>=6.9.0",
    "huggingface-hub>=1.6.0",
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "ipywidgets>=8.1.8",
    "matplot>=0.1.9",
    "modal>=1.3.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
